# Event-Management-App

./: Action.cpp  Action.h  CMakeLists.txt  CSV_Repo.cpp  CSV_Repo.h  Event.cpp  Event.h  Exceptions.cpp  Exceptions.h  HTML_Repo.cpp  HTML_Repo.h  README.md  Repository.cpp  Repository.h  Service.cpp  Service.h  TableMode.cpp  TableMode.h  UI.cpp  UI.h  Utils.cpp  Utils.h  Validations.cpp  Validations.h  main.cpp
GUI/: GUI.cpp  GUI.h
